# docker-kestrel

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
src/docker_kestrel/: __init__.py  __main__.py  server.py
src/docker_kestrel/analysis/: container.py
src/docker_kestrel/tools/: compose_drift.py  diagnose_container.py  network_map.py  resource_overview.py
src/dockerscope/: __init__.py  __main__.py  docker_client.py  server.py
src/dockerscope/analysis/: container.py
src/dockerscope/tools/: log_analysis.py  network_map.py
tests/: test_analysis.py  test_integration.py
