[project]
name = "docker-kestrel"
version = "0.1.0"
description = "MCP server providing diagnostic intelligence for Docker environments"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["docker", "mcp", "diagnostics", "devtools"]
dependencies = [
    "docker>=7.1.0",
    "mcp>=1.27.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.scripts]
docker-kestrel = "docker_kestrel.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "testcontainers>=4.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docker_kestrel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
